--- a/index.html
+++ b/index.html
@@ -12,12 +12,8 @@
 <body>
     <header class='container'>
         <div class='row'>
-            <h1 class='page-title col-8'>
-                <i class="fas fa-paper-plane"></i>
-                <a href='/'>Kale Evans</a>
-            </h1>
-            <nav class='col-4 align-itens-center'>
-                <div class='row align-itens-center'>
+            <nav class='col-4'>
+                <div class='row justify-content-center'>
                     <h5 class='nav-link col mb-0'>
                         <a href='#projects'>Projects</a>
                     </h5>
@@ -33,12 +29,17 @@
     </header>
     <main>
         <div class='container-fluid hero'>
-            <h3 class='hero-text'>Hi! My name is Kale Evans. I am an aspiring Developer / Software Engineer looking to work in the Austin, Texas area.</h3>
+            <div class='container'>
+                <h3 class='hero-text text-center'>Hi! My name is Kale Evans. I am an aspiring Developer / Software Engineer looking to work in the Austin, Texas area.</h3>
+            </div>
         </div>
         <div class='container about'>
             <h2 class='about-title'>About Me</h2>
             <div class='row justify-content-center'>
-                <div class='col-8'>
+                <div class='about-img col-10 col-md-8 col-xl-4 mb-3'>
+                    <img src='assets/images/self-portrait.jpg' class='about-img img-fluid shadow-lg rounded'>
+                </div>
+                <div class='col-10 col-md-10 col-xl-8'>
                     <p class='about-text'>I currently work as a Systems Engineer at The Boeing Company. I graduated from the University of Oklahoma
                         in 2019 with a Bachelor's degree in Aerospace Engineering, and have remained in Oklahoma for quite some time now.
                         After working in the aerospace industry for a few years, I started to develop a passion for coding in my free time. 
@@ -47,9 +48,6 @@
                         find a new job close to home. Outside of my professional life I enjoy playing video games, skiing, and traveling whenever
                         I can afford it!
                     </p>
-                </div>
-                <div class='about-img col-4'>
-                    <img src='assets/images/self-portrait.jpg' class='about-img img-fluid shadow-lg rounded'>
                 </div>
             </div>
         </div>
@@ -61,11 +59,11 @@
                         As a full stack web devloper I have a wide range of knowledge in JavaScript, CSS, and HTML. While in college, I did a fair amount of
                         work with C++ designing embedded systems, using methods such as state machines. I also have proficiency working with SQL and REST API 
                         databases. I find myself enjoying writing code with node.js, particularly when working with databases and creating algorithms to manipulate
-                        the data. I also have a good amountof knowledge when it comes to system architecture, as well as working with several integrated teams 
+                        the data. I also have a good amount of knowledge when it comes to system architecture, as well as working with several integrated teams 
                         across multiple functions, which is what I have done on the job at Boeing.
                     </p>
                 </div>
-                <div class='col-2 justify-content-center'>
+                <div class='col-xl-2 col-lg-4 col-10'>
                     <img src="https://img.icons8.com/color/48/000000/html-5--v1.png"/>
                     <img src="https://img.icons8.com/color/48/000000/css3.png"/>
                     <img src="https://img.icons8.com/color/48/000000/javascript.png"/>
@@ -74,6 +72,7 @@
                     <img src="https://img.icons8.com/fluent/48/000000/github.png"/>
                     <img src="https://img.icons8.com/color/48/000000/visual-studio.png"/>
                     <img src="https://img.icons8.com/fluent/48/000000/microsoft-excel-2019.png"/>
+                    <img src="https://img.icons8.com/color/48/000000/c-plus-plus-logo.png"/>
                 </div>
             </div>
         </div>
