--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
     <title>Kale Evans</title>
     <link rel="stylesheet" href="./assets/css/styles.css">
@@ -34,7 +34,7 @@
             </div>
         </div>
         <div class='container about'>
-            <h2 class='about-title'>About Me</h2>
+            <h3 class='about-title'>About Me</h3>
             <div class='row justify-content-center'>
                 <div class='about-img col-10 col-md-8 col-xl-4 mb-3'>
                     <img src='assets/images/self-portrait.jpg' class='about-img img-fluid shadow-lg rounded'>
@@ -52,7 +52,7 @@
             </div>
         </div>
         <div class='container skills'>
-            <h2 class='skills-title'>Skills / Areas of Interest</h2>
+            <h3 class='skills-title'>Skills / Areas of Interest</h3>
             <div class='row justify-content-center'>
                 <div class='col-10'>
                     <p class='skill-text'>
@@ -64,21 +64,67 @@
                     </p>
                 </div>
                 <div class='col-xl-2 col-lg-4 col-10'>
-                    <img src="https://img.icons8.com/color/48/000000/html-5--v1.png"/>
-                    <img src="https://img.icons8.com/color/48/000000/css3.png"/>
-                    <img src="https://img.icons8.com/color/48/000000/javascript.png"/>
-                    <img src="https://img.icons8.com/ios-filled/50/000000/sql.png"/>
-                    <img src="https://img.icons8.com/color/48/000000/nodejs.png"/>
-                    <img src="https://img.icons8.com/fluent/48/000000/github.png"/>
-                    <img src="https://img.icons8.com/color/48/000000/visual-studio.png"/>
-                    <img src="https://img.icons8.com/fluent/48/000000/microsoft-excel-2019.png"/>
-                    <img src="https://img.icons8.com/color/48/000000/c-plus-plus-logo.png"/>
+                    <div class='row justify-content-center'>
+                        <div class='sw html'>
+                            <img src="https://img.icons8.com/color/48/000000/html-5--v1.png"/>
+                        </div>
+                        <div class='sw css'>
+                            <img src="https://img.icons8.com/color/48/000000/css3.png"/>
+                        </div>
+                        <div class='sw js'>
+                            <img src="https://img.icons8.com/color/48/000000/javascript.png"/>
+                        </div>
+                    </div>
+                    <div class='row justify-content-center'>
+                        <div class='sw sql'>
+                            <img src="https://img.icons8.com/ios-filled/50/000000/sql.png"/>
+                        </div>
+                        <div class='sw node'>
+                            <img src="https://img.icons8.com/color/48/000000/nodejs.png"/>
+                        </div>
+                        <div class='sw git'>
+                            <img src="https://img.icons8.com/fluent/48/000000/github.png"/>
+                        </div>
+                    </div>
+                    <div class='row justify-content-center'>
+                        <div class='sw vs'>
+                            <img src="https://img.icons8.com/color/48/000000/visual-studio.png"/>
+                        </div>
+                        <div class='sw excel'>
+                            <img src="https://img.icons8.com/fluent/48/000000/microsoft-excel-2019.png"/>
+                        </div>
+                        <div class='sw cplus'>
+                            <img src="https://img.icons8.com/color/48/000000/c-plus-plus-logo.png"/>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
         <div class='container contact'>
-            <h2 class='contact-title'>Reach Out</h2>
+            <h3 class='contact-title text-center'>Reach Out</h3>
+            <div class='container '>
+                <div class='row justify-content-center'>
+                    <div class='links linkedin'>
+                        <a href="https://www.linkedin.com/in/kaletevans/" target="_blank" class='linkedin-link'>
+                            <img src="https://img.icons8.com/fluent/48/000000/linkedin.png"/>
+                        </a>
+                    </div>
+                    <div class='links github'>
+                        <a href="https://www.github.com/KaleTEvans" target="_blank" class="github-link">
+                            <img src="https://img.icons8.com/fluent/48/000000/github.png"/>
+                        </a>
+                    </div>
+                    <div class='links email'>
+                        <a href="mailto:kaletevans@gmail.com" class='email-link' >
+                            <img src="https://img.icons8.com/ios-filled/50/000000/send-mass-email.png" class='email-link'/>
+                        </a>
+                    </div>
+            </div>
+            </div>
         </div>
+        <footer>
+            <p class='text-center'>Copyright Kale Evans 2021</p>
+        </footer>
     </main>
     
 </body>
