--- a/index.html
+++ b/index.html
@@ -11,20 +11,16 @@
 </head>
 <body>
     <header class='container'>
-        <div class='row'>
-            <nav class='col-4'>
-                <div class='row justify-content-center'>
-                    <h5 class='nav-link col mb-0'>
-                        <a href='#projects'>Projects</a>
-                    </h5>
-                    <h5 class='nav-link col mb-0'>
-                        <a href='#contact'>Contact</a>
-                    </h5>
-                    <h5 class='nav-link col mb-0'>
-                        <a href='./assets/resume/'>Resume</a>
-                    </h5>
-                </div>
-            </nav>
+        <div class='row justify-content-end'>
+            <h5 class='col-md-1 col-sm-3 mb-0'>
+                <a href='#projects' class='nav-link'>Projects</a>
+            </h5>
+            <h5 class='col-md-1 col-sm-3 mb-0'>
+                <a href='#contact' class='nav-link'>Contact</a>
+            </h5>
+            <h5 class='col-md-1 col-sm-3 mb-0'>
+                <a href='./assets/resume/' class='nav-link'>Resume</a>
+            </h5>
         </div>
     </header>
     <main>
