--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <header class='container'>
         <div class='row justify-content-end'>
             <h5 class='col-md-1 col-sm-3 mb-0'>
-                <a href='#projects' class='nav-link'>Projects</a>
+                <a href='./index.html' class='nav-link'>Home</a>
             </h5>
             <h5 class='col-md-1 col-sm-3 mb-0'>
-                <a href='#contact' class='nav-link'>Contact</a>
+                <a href='./projects.html' class='nav-link'>Projects</a>
             </h5>
             <h5 class='col-md-1 col-sm-3 mb-0'>
                 <a href='./assets/resume/' class='nav-link'>Resume</a>
