--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
     <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 <body>
-    <header class='container'>
-        <div class='row justify-content-end'>
-            <h5 class='col-md-1 col-sm-3 mb-0'>
-                <a href='./index.html' class='nav-link'>Home</a>
-            </h5>
-            <h5 class='col-md-1 col-sm-3 mb-0'>
-                <a href='./projects.html' class='nav-link'>Projects</a>
-            </h5>
-            <h5 class='col-md-1 col-sm-3 mb-0'>
-                <a href='./assets/resume/' class='nav-link'>Resume</a>
-            </h5>
-        </div>
+    <header>
+        <ul class='nav justify-content-end flex-md-row flex-column'>
+            <li class='nav-item'>
+                <a class='nav-link' href='./index.html'>Home</a>
+            </li>
+            <li class='nav-item'>
+                <a class='nav-link' href="./projects.html">Projects</a>
+            </li>
+            <li class='nav-item'>
+                <a class='nav-link' href='#'>Resume</a>
+            </li>
+        </ul>
     </header>
     <main>
         <div class='container-fluid hero'>
