project and css changes

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
                 <a class='nav-link' href='./index.html'>Home</a>
             </li>
             <li class='nav-item'>
-                <a class='nav-link' href="./projects.html">Projects</a>
+                <a class='nav-link' href="./projects.html" >Projects</a>
             </li>
             <li class='nav-item'>
-                <a class='nav-link' href='#'>Resume</a>
+                <a class='nav-link' target="_blank" href='./assets/linked-files/Kale_Evans.pdf'>Resume</a>
             </li>
         </ul>
     </header>
