--- a/projects.html
+++ b/projects.html
@@ -66,15 +66,66 @@
                         </div>
                     </div>
                 </div>
-                <!-- <p class='project-description text-center'>This is an ongoing side project I have been working on. Right now I have been pulling
-                    data from APIs such as the Yahoo Data API, AlphaVantage, and Stock News APIs. I believe the stock market lately
-                    has been heavily reactive to news and general sentiment, and I am trying to build a platform that can follow trends 
-                    and sentiment and combine a bit of technical analysis to produce stock recommendations. I also plan on adding my own API
-                    to save the recommended stokcs and follow their price movement in order to see which analysis methods work the best
-                    and iterate on my methods to produce more accurate predictions. 
-                </p> -->
+            </div>
+            <h3 class='project-title text-center'>Reddit Stock Tracker</h3>
+            <div class='project-img'>
+                <a href="https://github.com/KaleTEvans/reddit-stock-tracker.git" target="_blank" class='project-pic'>
+                    <div class='project-box'>
+                        <img src='./assets/images/table.jpg' class='img-fluid mx-auto d-block project-view'>
+                        <div class='overlay'>
+                            <div class='text'>View GitHub</div>
+                        </div>
+                    </div>
+                </a>
+                <div class='accordion' id='redditProject'>
+                    <div class='card'>
+                        <div class='card-header' id='headingTwo'>
+                            <h2 class='mb-0 text-center'>
+                                <button class="btn btn-link collapsed font-weight-bold text-decoration-none" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                    Description
+                                </button>
+                            </h2>
+                        </div>
+                        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#redditProject">
+                            <div class='card-body'>
+                                This is another ongoing side project I have been working on. The purpose of this program is to pull data from the reddit API, specifically from
+                                the WallStBets forum, and search for traffic on different stocks. I started working on this because I wanted to experiment with creating a search engine,
+                                with the future possibility of creating my own APIs for the above stock project that have been personalized to give me the data I specifically want. 
+                                As of right now, the app is very limited, and only scans the title of the hot posts on the forum for ticker symbols, and uses a node sentiment analyzer 
+                                package (that does not understand reddit lingo very well) to rate the sentiment of the title, and uploads this data to an SQL database where I am able
+                                to manipulate and visualize the outcomes. I plan to add several upgrades in the future to make a cleaner and broader search and sentiment scorer, but getting
+                                the foundations has allowed me to learn a lot about how sentiment trackers like the Stock News API I have used in my stock project work. 
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
+        <div class='container contact'>
+            <h3 class='contact-title text-center'>Reach Out</h3>
+            <div class='container '>
+                <div class='row justify-content-center'>
+                    <div class='links linkedin'>
+                        <a href="https://www.linkedin.com/in/kaletevans/" target="_blank" class='linkedin-link'>
+                            <img src="https://img.icons8.com/fluent/48/000000/linkedin.png"/>
+                        </a>
+                    </div>
+                    <div class='links github'>
+                        <a href="https://www.github.com/KaleTEvans" target="_blank" class="github-link">
+                            <img src="https://img.icons8.com/fluent/48/000000/github.png"/>
+                        </a>
+                    </div>
+                    <div class='links email'>
+                        <a href="mailto:kaletevans@gmail.com" class='email-link' >
+                            <img src="https://img.icons8.com/ios-filled/50/000000/send-mass-email.png" class='email-link'/>
+                        </a>
+                    </div>
+            </div>
+            </div>
+        </div>
+        <footer>
+            <p class='text-center'>Copyright Kale Evans 2021</p>
+        </footer>
     </main>
     
 </body>
