--- a/projects.html
+++ b/projects.html
@@ -60,7 +60,7 @@
                                 data from APIs such as the Yahoo Data API, AlphaVantage, and Stock News APIs. I believe the stock market lately
                                 has been heavily reactive to news and general sentiment, and I am trying to build a platform that can follow trends 
                                 and sentiment and combine a bit of technical analysis to produce stock recommendations. I also plan on adding my own API
-                                to save the recommended stokcs and follow their price movement in order to see which analysis methods work the best
+                                to save the recommended stocks and follow their price movement in order to see which analysis methods work the best
                                 and iterate on my methods to produce more accurate predictions. 
                             </div>
                         </div>
