--- a/index.html
+++ b/index.html
@@ -115,7 +115,10 @@
                             <img src="https://img.icons8.com/ios-filled/50/000000/send-mass-email.png" class='email-link'/>
                         </a>
                     </div>
-            </div>
+                </div>
+                <div class='row justify-content-center mt-3'>
+                    <h6 class='text-center font-weight-bold'>Email: kaletevans@gmail.com</h6>
+                </div>
             </div>
         </div>
         <footer>
