added live webpage to project

--- a/projects.html
+++ b/projects.html
@@ -37,11 +37,11 @@
         <div class='container justify-content-center'>
             <h3 class='project-title text-center'>Stock Dashboard</h3>
             <div class='project-img'>
-                <a href="https://github.com/KaleTEvans/stocksV2.git" target="_blank" class='project-pic'>
+                <a href="https://floating-dusk-83595.herokuapp.com/" target="_blank" class='project-pic'>
                     <div class='project-box'>
                         <img src='./assets/images/stocks.jpg' class='img-fluid mx-auto d-block project-view'>
                         <div class='overlay'>
-                            <div class='text'>View GitHub</div>
+                            <div class='text'>View Application</div>
                         </div>
                     </div>
                 </a>
@@ -61,7 +61,7 @@
                                 has been heavily reactive to news and general sentiment, and I am trying to build a platform that can follow trends 
                                 and sentiment and combine a bit of technical analysis to produce stock recommendations. I also plan on adding my own API
                                 to save the recommended stocks and follow their price movement in order to see which analysis methods work the best
-                                and iterate on my methods to produce more accurate predictions. 
+                                and iterate on my methods to produce more accurate predictions. The project's GitHub can be found at https://github.com/KaleTEvans/stocksV2
                             </div>
                         </div>
                     </div>
