added new project

--- a/projects.html
+++ b/projects.html
@@ -100,6 +100,35 @@
                     </div>
                 </div>
             </div>
+            <h3 class='project-title text-center'>Fantasy Sports Team Blog</h3>
+            <div class='project-img'>
+                <a href="https://fantasy-team-builder.herokuapp.com/" target="_blank" class='project-pic'>
+                    <div class='project-box'>
+                        <img src='./assets/images/fantasy-team.jpg' class='img-fluid mx-auto d-block project-view'>
+                        <div class='overlay'>
+                            <div class='text'>View Application</div>
+                        </div>
+                    </div>
+                </a>
+                <div class='accordion' id='sportsProject'>
+                    <div class='card'>
+                        <div class='card-header' id='headingThree'>
+                            <h2 class='mb-0 text-center'>
+                                <button class="btn btn-link collapsed font-weight-bold text-decoration-none" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseTwo">
+                                    Description
+                                </button>
+                            </h2>
+                        </div>
+                        <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#sportsProject">
+                            <div class='card-body'>
+                                This is from a group project done with the University of Texas Web Developer Boot Camp. The project requirements were to create a full stack 
+                                application, using nodeJs and mySQL for the back end and database, and handlebars for the generated front end. The project was completed using 
+                                GitHub version control to ensure updates to the code were made smoothly. The project's GitHub can be found at https://github.com/jshmtchll/fantasy-team-roster 
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class='container contact'>
             <h3 class='contact-title text-center'>Reach Out</h3>
