--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
                 <a class='nav-link' href="./projects.html">Projects</a>
             </li>
             <li class='nav-item'>
-                <a class='nav-link' href='#'>Resume</a>
+                <a class='nav-link' href='./assets/linked-files/Kale_Evans.pdf'>Resume</a>
             </li>
         </ul>
         <div class='title'>
