project and header changes

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main>
         <div class='container-fluid hero'>
             <div class='container'>
-                <h3 class='hero-text text-center'>Hi! My name is Kale Evans. I am an aspiring Developer / Software Engineer looking to work in the Austin, Texas area.</h3>
+                <h3 class='hero-text text-center'>Hi! My name is Kale Evans. I am a Full Stack Developer with a background in Aerospace and Systems Engineering looking to work in the Austin, Texas area.</h3>
             </div>
         </div>
         <div class='container about'>
