--- a/projects.html
+++ b/projects.html
@@ -56,8 +56,7 @@
                         </div>
                         <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#stockProject">
                             <div class='card-body'>
-                                This is an ongoing side project I have been working on. Right now I have been pulling
-                                data from APIs such as the Yahoo Data API, AlphaVantage, and Stock News APIs. I believe the stock market lately
+                                This is an ongoing side project I have been working on built with JavaScript, NodeJS, and HTML/CSS. I believe the stock market lately
                                 has been heavily reactive to news and general sentiment, and I am trying to build a platform that can follow trends 
                                 and sentiment and combine a bit of technical analysis to produce stock recommendations. I also plan on adding my own API
                                 to save the recommended stocks and follow their price movement in order to see which analysis methods work the best
@@ -88,7 +87,7 @@
                         </div>
                         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#redditProject">
                             <div class='card-body'>
-                                This is another ongoing side project I have been working on. The purpose of this program is to pull data from the reddit API, specifically from
+                                This is another ongoing side project I have been working on built with NodeJs and mySQL. The purpose of this program is to pull data from the reddit API, specifically from
                                 the WallStBets forum, and search for traffic on different stocks. I started working on this because I wanted to experiment with creating a search engine,
                                 with the future possibility of creating my own APIs for the above stock project that have been personalized to give me the data I specifically want. 
                                 As of right now, the app is very limited, and only scans the title of the hot posts on the forum for ticker symbols, and uses a node sentiment analyzer 
