fixed broken link

--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,7 @@
         <div class='container justify-content-center'>
             <h3 class='project-title text-center'>Stock Dashboard</h3>
             <div class='project-img'>
-                <a href="https://floating-dusk-83595.herokuapp.com/" target="_blank" class='project-pic'>
+                <a href="https://stock-news-dashboard.herokuapp.com/" target="_blank" class='project-pic'>
                     <div class='project-box'>
                         <img src='./assets/images/stocks.jpg' class='img-fluid mx-auto d-block project-view'>
                         <div class='overlay'>
